<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".InfoWindowFragment">

    <TextView
        android:id="@+id/info_window_headline"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:letterSpacing=".2"
        android:text="@string/info_window"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bank_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_window_headline"
        android:layout_marginTop="15dp"
        android:text="@string/bank_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bank_name"
        android:layout_marginTop="5dp"
        android:text="@string/address"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/post_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_marginTop="5dp"
        android:text="@string/post_code"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sub_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_code"
        android:layout_marginTop="5dp"
        android:text="@string/sub_type"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/distance_from_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sub_type"
        android:layout_marginTop="5dp"
        android:text="@string/distance_from_home"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distance_from_home"
        android:layout_marginTop="5dp"
        android:text="@string/coordinates"
        android:textSize="18sp" />


</RelativeLayout>