<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/bank_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/bank_name"
        android:textSize="16sp" />



    <TextView
        android:id="@+id/sub_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bank_name"
        android:layout_marginTop="5dp"
        android:text="@string/sub_type"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/distance_from_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sub_type"
        android:layout_marginTop="5dp"
        android:text="@string/distance_from_home"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distance_from_home"
        android:layout_marginTop="5dp"
        android:text="@string/coordinates"
        android:textSize="16sp" />
</RelativeLayout>